--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ========================
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/notice_board_db?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://host.docker.internal:3306/notice_board_db?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=noticeboard
 spring.datasource.password=noticeboard
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
