--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 # ========================
 
 # MySQL
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/notice_board_db?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=noticeboard
-spring.datasource.password=noticeboard
+spring.datasource.url=jdbc:mysql://localhost:3306/board_db
+spring.datasource.username=test
+spring.datasource.password=test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ========================
@@ -16,3 +16,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
